--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,32 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "GithubRemark",
-  "version": "0.5.3",
+  "version": "0.5.4",
   "description": "给你的Github好友增加备注名吧～",
-  "icons": { "128": "images/github_512.png" },
-  "background": {
-    "persistent": true,
-    "scripts": ["bg.js"]
+  "icons": {
+    "128": "images/github_512.png"
   },
-  "permissions": ["tabs", "*://*.github.com/*"],
-  "browser_action": {
+  "background": {
+    "service_worker": "bg.js"
+  },
+  "permissions": [
+    "tabs",
+    "scripting",
+    "storage"
+  ],
+  "host_permissions": [
+    "*://*.github.com/*"
+  ],
+  "action": {
     "default_title": "GithubRemark",
     "default_icon": {
-        "19": "images/github.png"
+      "19": "images/github.png"
     },
     "default_popup": "popup.html"
   },
-	"options_ui": {
-		"page": "options.html",
-		"chrome_style": true
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": true
   },
   "devtools_page": "options.html"
 }
-
